--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,122 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+class Course:
+    def __init__(self, course_name, course_level):
+        self.course_id = None
+        self.course_name = course_name
+        self.course_level = course_level.upper()
+
+
+class Student:
+    next_student_id = 1
+
+    def __init__(self, student_name, student_level):
+        self.student_id = Student.next_student_id
+        Student.next_student_id += 1
+        self.student_name = student_name
+        self.student_level = student_level.upper()
+        self.student_courses = []
+
+
+courses = []
+students = []
+
+
+def add_new_student():
+    student_name = input("Enter student name: ")
+    student_level = input("Enter student level (A-B-C): ").upper()
+    while student_level not in ['A', 'B', 'C']:
+        print("Invalid level. Please choose from A, B, or C.")
+        student_level = input("Enter student level (A-B-C): ").upper()
+
+    new_student = Student(student_name, student_level)
+    students.append(new_student)
+    print("Student saved successfully.")
+
+
+def remove_student():
+    student_id = int(input("Enter student ID: "))
+    for student in students:
+        if student.student_id == student_id:
+            students.remove(student)
+            print("Student delete done successfully.")
+            return
+    print("User does not exist.")
+
+
+def edit_student():
+    student_id = int(input("Enter student ID: "))
+    for student in students:
+        if student.student_id == student_id:
+            new_name = input("Enter new name: ")
+            new_level = input("Enter new level (A-B-C): ").upper()
+            student.student_name = new_name
+            student.student_level = new_level
+            print("Student details updated successfully.")
+            return
+    print("User does not exist.")
+
+
+def display_all_students():
+    for student in students:
+        print(f"Student ID: {student.student_id}, Name: {student.student_name}, Level: {student.student_level}")
+
+
+def create_new_course():
+    course_name = input("Enter course name: ")
+    course_level = input("Enter course level (A-B-C): ").upper()
+    new_course = Course(course_name, course_level)
+    courses.append(new_course)
+    print("Course created successfully.")
+
+
+def add_course_to_student():
+    student_id = int(input("Enter student ID: "))
+    course_id = int(input("Enter course ID: "))
+
+    student = None
+    for s in students:
+        if s.student_id == student_id:
+            student = s
+            break
+
+    if student:
+        course = None
+        for c in courses:
+            if c.course_id == course_id:
+                course = c
+                break
+
+        if course:
+            student.add_course(course)
+            print("Course added to student successfully.")
+        else:
+            print("Course does not exist.")
+    else:
+        print("Student does not exist.")
+
+
+while True:
+    print("\nMain Page")
+    print("1. Add New Student")
+    print("2. Remove Student")
+    print("3. Edit Student")
+    print("4. Display all students")
+    print("5. Create New Course")
+    print("6. Add Course to Student")
+    choice = input("Enter your choice (1-6, or any other key to exit): ")
+
+    if choice == '1':
+        add_new_student()
+    elif choice == '2':
+        remove_student()
+    elif choice == '3':
+        edit_student()
+    elif choice == '4':
+        display_all_students()
+    elif choice == '5':
+        create_new_course()
+    elif choice == '6':
+        add_course_to_student()
+    else:
+        print("Exiting program.")
+        break
+
